# capsorter-software

./: .gitignore  CMakeLists.txt  Capsorter Instructions.docx  ImageProcessingLog.txt  Makefile  capsorter.c  data - 16 caps.txt  data - Copy.txt  data.txt  main.c  main.elf  main.hex  ml.c  neg.c  resource.h  tx.c  usbtest.c
Capsorter/: CmakeLists.txt
Capsorter/GUI/: CMakeLists.txt  capsorter.c  resource.h
Capsorter/ImageProcessing/: CmakeLists.txt
docs/: Compilation software instructions.txt  OpenCV install intructions.txt  The Capsorter.docx
mcu/: CMakeLists.txt  PQ.c  PQ.h  main.c  main.elf  main.hex  main.lss  main.map  main.sym  makefile  uint.c
usbdrv/: usbconfig.h
